<resources>
    <string name="app_name">CST2335FinalProject</string>
    <string name="Final_Project" translatable="false">Final Project</string>

    <string name="sunrise_sunset_lookup">Sunrise &amp; Sunset lookup</string>
    <string name="recipe_search" translatable="false">Recipe Search</string>
    <string name="dictionary_api" translatable="false">Dictionary API</string>
    <string name="deezer_song_search_api" translatable="false">Deezer song search api</string>
    <string name="Lookup">Lookup</string>
    

    <!-- Showcase title -->
...
    <string name="title">Title Detail</string>
    <string name="albumNameDetail">Album Name Detail</string>
    <string name="addFavorite">ADD FAVORITE</string>
    <string name="showFavorites">SHOW FAVORITES</string>
    <string name="deleteFavorite">DELETE FAVORITE</string>
    <string name="albumCover">Album cover</string>
    <string name="searchButton">SEARCH</string>
    <string name="OK">OK</string>
    <string name="help_title">Help</string>
    <string name="instructions">Instructions:Search artist for list of songs to see details or add to favorites.</string>
    <string name="itemClicked">Item clicked: </string>
    <string name="songAdded">Song added into favorites</string>
    <string name="songAlreadyExist">Song already in favorites</string>
...
